--- a/Asset Transfer Bot by PC Jones/Asset Transfer Bot by PC Jones.csproj
+++ b/Asset Transfer Bot by PC Jones/Asset Transfer Bot by PC Jones.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Cryptography.ECDSA.Secp256k1" Version="1.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
